# caselaw-repo-1

./: .env.example  .gitignore  README.md  VALIDATION_REPORT.md  base_scraper.py  bge.py  bger.py  build_fts5.py  coverage_report.py  dataset_card.md  db_schema.py  deploy_incapsula_bypass.sh  export_parquet.py  fts5_server.py  generate_stats.py  incapsula_bypass.py  mcp-server.service  mcp-server@.service  mcp_server.py  models.py  nginx-mcp-server.conf  pipeline.py  publish.py  pyproject.toml  quality_report.py  requirements.txt  run_all_scrapers.py  run_scraper.py  test_appeal_chain.py  test_bger_live.py  test_build_fts5_quality.py  test_build_vectors.py  test_chunker.py  test_coverage_report.py  test_entscheidsuche_ingest_dedup.py  test_federal_live.py  test_hybrid_service_semantic.py  test_llm_expansion.py  test_mcp_search_nl.py  test_mock_decision_tool.py  (+14 more)
benchmarks/: latest_search_benchmark_review.json  latest_search_benchmark_synonym.json  latest_search_benchmark_synonym_v2.json  run_search_benchmark.py  search_relevance_golden.json
docs/: CNAME  claude-desktop-setup.md  index.html  robots.txt  sitemap.xml  stats.json  web-ui-local.md
scrapers/: __init__.py  bge.py  bge_egmr.py  bge_historical.py  bger.py  bpatger.py  bstger.py  bvger.py  ch_bundesrat.py  comcom.py  edoeb.py  elcom.py  emark.py  entscheidsuche_download.py  entscheidsuche_ingest.py  fedlex.py  finma.py  finma_versicherungsrecht.py  hudoc.py  onlinekommentar.py  postcom.py  probe_finma.py  probe_finma_api.py  probe_finma_counts.py  probe_finma_deep.py  probe_finma_deep2.py  probe_finma_deep3.py  probe_finma_final.py  scrape_finma.py  scrape_weko.py  ta_sst.py  ubi.py  weko.py
scripts/: audit_bger_coverage.py  audit_quality.py  audit_stubs.py  audit_text_length.py  backfill_dates.py  build_desktop_extension.sh  dedup_jsonl.py  enrich_quality.py  enrich_vpb.py  extract_ai_compilations.py  extract_decision_date.py  recover_vpb_pdfs.py  repair_ag_pdf_failures.py  repair_bpatger_pdfs.py  repair_decision_dates.py  repair_short_text.py  run_web_local.ps1  run_web_local.sh  scrape_ne_local.sh  test_be_all_portals.py  test_be_filters.py  test_be_portals.py
search_stack/: __init__.py  build_ok_commentaries_db.py  build_reference_graph.py  build_statutes_db.py  build_vectors.py  chunker.py  hybrid_service.py  merge_shards.py  opensearch_ingest.py  opensearch_schema.py  query_planner.py  reference_extraction.py
study/: cli.py  parser.py  (+5 more)
(+115 files in other folders)
