[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-caselaw-scrapers"
version = "0.1.0"
description = "Scraping framework for Swiss federal and cantonal court decisions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Jonas Hertner"}]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "playwright>=1.46",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
crypto = ["pycryptodome>=3.20"]
pdf = ["pymupdf>=1.23"]
api = ["fastapi>=0.104", "uvicorn>=0.24"]
semantic = ["sentence-transformers>=3.0", "sqlite-vec>=0.1.6", "onnxruntime>=1.17"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.1"]
all = ["swiss-caselaw-scrapers[crypto,pdf,api,semantic,dev]"]

[tool.setuptools.packages.find]
include = ["scrapers*", "search_stack*"]

[tool.setuptools]
py-modules = ["pipeline", "base_scraper", "models", "db_schema", "run_scraper", "mcp_server", "fts5_server", "export_parquet", "build_fts5"]

[project.scripts]
swiss-caselaw = "pipeline:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m \"not live and not manual\""
markers = [
    "live: requires live network/system interaction; excluded from default pytest runs",
    "manual: diagnostic/manual test; excluded from default pytest runs",
]
